fixed navbar pushing the scrollable container down when it is uncollapsed in mobile view

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -333,6 +333,18 @@ input[type=text], input[type=email], input[type=password], input[type=date], inp
   justify-content: center;
 }
 
+.home-scroll-container {
+  margin-bottom: 1rem;
+}
+
+.scrollable-container-favorites {
+  padding-bottom: 4rem;
+}
+
+// .scrollable-container-moviedetails {
+//   padding-top: 0rem;
+// }
+
 #info-modal {
   z-index: 9999;
 }
@@ -388,6 +400,25 @@ input[type=text], input[type=email], input[type=password], input[type=date], inp
   justify-content: center;
   height: auto;
   text-align: center;
+}
+
+@media (max-width: 991px) {
+  .navbar-collapse {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: white;
+    z-index: 1000;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    display: none; /* Ensure it's hidden by default */
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .navbar-collapse.show {
+    display: block; /* Only show when expanded */
+  }
 }
 
 @media only screen and (max-width: 505px) {
